# mext

./: .gitignore  LICENSE  MANIFEST.in  README  README-yaml.yaml  README.md  README.mext  README.yaml  makefile  pyproject.toml  setup.py
autocode/: main.py
autocode/libs/: config_loader.py  context_manager.py  mext.py  text_completion_endpoint.py  utils.py
configs/: autocode.yaml
docs/: render_prompts_for_llm.md  syntax.md  usage_as_a_template_language.md
examples/: prompts_for_llm.mext  prompts_for_llm.py
mext/: __init__.py  mext.py  mext_parser.py
mext/libs/: config_loader.py  utils.py
mext/scripts/: render_mext.py
prompts/: action_list.mext  autotask.mext
prompts/components/: actions_list.mext
prompts/params/: autotask.yaml
prompts/profiles/: alex.mext
prompts/tasks/dummy/: python-regex.mext
readme_src/: README-yaml.mext  README-yaml.yaml  README.mext  README.yaml  render_prompts_for_llm.mext  syntax.mext  template_language_usage.mext
render_prompts/params/: autotask.yaml
tests/: test.py  test_mext.py  test_mext_parser.py  test_objdict.py
tests/mext/data/: data1.yaml
tests/mext/prompts/: include1.mext
tests/mext/readme/: comment.md  comment.mext  count.yaml  default.md  default.yaml  for.mext  format.mext  if.md  if.mext  import.md  import.mext  import.yaml  input.mext.ignore  option.md  set.md  trim_newline.mext
tests/mext/readme/syntax/: count.mext  default.mext  for.md  for.yaml  format.md  format.yaml  if.md  if.yaml  include.md  include.mext  input.md  option.mext  set.mext  trim_newline.md
tests/mext/readme/template_language_usage/: basic.out  basic.py  register_formatter.out  register_formatter.py  reuse.mext  reuse.out  reuse.py  with_template.mext  with_template.out  with_template.py
tests/mext_prompts/: include1.mext
tools/: render_mext.py
