[project]
name = "mext"
version = "0.1.0"
authors = [
  { name = "Donny C.", email = "donny.hikari@gmail.com" },
]
description = "Mext is an prompt template language that is useful for creating prompts for LLM."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pyyaml>=5.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
render-mext = "mext.scripts.render_mext:render_mext"

[tool.hatch.build]
packages = ["mext"]
include-data = {"mext" = ["libs/*", "scripts/*"]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
